--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         arch: [x86_64]
         os: [ubuntu-latest, macos-latest]
-        python: [38, 39, 310, 311]
+        python: [311]
         include:
           - os: ubuntu-latest
             platform: manylinux
