test action update 1

--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -31,6 +31,7 @@ jobs:
           - os: ubuntu-latest
             platform: manylinux
           - os: ubuntu-latest
+            platform: manylinux
             arch: aarch64
             # arch: aarch64
             # arch: ppc64le
