--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -15,15 +15,10 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-env:
-  linux_arch: [x86_64, aarch64]
-  macos_arch: [x86_64, arm64]
-  
-
 jobs:
 
   build_wheels:
-    name: Wheel cp${{ matrix.python }}-${{ matrix.platform }}_${{ matrix.arch }}
+    name: Wheel cp${{ matrix.python }}-${{ matrix.platform }}
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -33,11 +28,14 @@ jobs:
         python: [310, 311]
         include:
           - os: ubuntu-latest
-            platform: manylinux
-            arch: ${{ env.linux_arch }}
+            platform: manylinux_x86_64
+          - os: ubuntu-latest
+            platform: manylinux_aarch64
+            # arch: ppc64le
           - os: macos-latest
-            platform: macosx
-            arch: ${{ env.macos_arch }}
+            platform: macosx_x86_64
+            # arch: arm64
+            # arch: universal2
 
     steps:
     - uses: actions/checkout@v3
@@ -49,7 +47,7 @@ jobs:
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.15.0
       env:
-        CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform }}_${{ matrix.arch }}
+        CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform }}
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
