test action update 9

--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -53,7 +53,7 @@ jobs:
               PFID="macosx_${ARCH}64"
           ;;
         esac
-        export "PFID=$PFID"
+        echo "PFID=$PFID" >> $GITHUB_ENV
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.15.0
