--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.15.0
       env:
-        CIBW_BUILD: cp${{ matrix.python }}-${{ platform_id }}
+        CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
