--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -31,19 +31,22 @@ jobs:
           - os: ubuntu-latest
             arch: x86
             platform_id: manylinux_x86_64
-            cibw_archs: auto
-          - os: ubuntu-latest
-            arch: arm
-            platform_id: manylinux_aarch64
-            cibw_archs: aarch64
+            cibw_arch: auto
+          # - os: ubuntu-latest
+          #   arch: arm
+          #   platform_id: manylinux_aarch64
+          #   cibw_arch: aarch64
           - os: macos-latest
             arch: x86
             platform_id: macosx_x86_64
-            cibw_archs: x86_64
+            cibw_arch: x86_64
           - os: macos-latest
             arch: arm
             platform_id: macosx_arm64
-            cibw_archs: arm64
+            cibw_arch: arm64
+        exclude:
+          - os: ubuntu-latest
+            arch: arm
 
     steps:
     - uses: actions/checkout@v3
@@ -62,8 +65,8 @@ jobs:
       uses: pypa/cibuildwheel@v2.15.0
       env:
         CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
-        CIBW_ARCHS_LINUX: ${{ matrix.cibw_archs }}
-        CIBW_ARCHS_MACOS: ${{ matrix.cibw_archs }}
+        CIBW_ARCHS_LINUX: ${{ matrix.cibw_arch }}
+        CIBW_ARCHS_MACOS: ${{ matrix.cibw_arch }}
         CIBW_TEST_SKIP: "*_aarch64, *_arm64, *_universal2:arm64"
 
     - name: Upload Build Artifact
