--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: [310, 311]
+        python: [38, 39, 310, 311]
         arch: [x86, arm]
         include:
           - os: ubuntu-latest
