efficient cibw and gh actions usage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,14 @@ local_scheme = 'no-local-version'
 parentdir_prefix_version = 'nuspacesim-'
 
 [tool.cibuildwheel]
+build = "cp3{8,9,10,11}-*"
 test-requires = "pytest"
 test-command = "pytest {project}/test"
+test-skip = "*-*linux_{aarch64,ppc64le,s390x}"
+test-skip = "*-macosx_arm64 *-macosx_universal2:arm64"
 
 [tool.cibuildwheel.macos]
-archs = ["x86_64"] #, "universal2", "arm64"]
+archs = ["x86_64", "arm64"]
 
 [tool.cibuildwheel.linux]
 archs = ["x86_64"]
