--- a/.github/workflows/pypi-build-test.yml
+++ b/.github/workflows/pypi-build-test.yml
@@ -25,28 +25,6 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: [38, 39, 310, 311]
-        arch: [x86, arm]
-        include:
-          - os: ubuntu-latest
-            arch: x86
-            platform_id: manylinux_x86_64
-            cibw_arch: auto
-          # - os: ubuntu-latest
-          #   arch: arm
-          #   platform_id: manylinux_aarch64
-          #   cibw_arch: aarch64
-          - os: macos-latest
-            arch: x86
-            platform_id: macosx_x86_64
-            cibw_arch: x86_64
-          - os: macos-latest
-            arch: arm
-            platform_id: macosx_arm64
-            cibw_arch: arm64
-        exclude:
-          - os: ubuntu-latest
-            arch: arm
 
     steps:
     - uses: actions/checkout@v3
@@ -63,11 +41,10 @@ jobs:
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.15.0
-      env:
-        CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
-        CIBW_ARCHS_LINUX: ${{ matrix.cibw_arch }}
-        CIBW_ARCHS_MACOS: ${{ matrix.cibw_arch }}
-        CIBW_TEST_SKIP: "*_aarch64, *_arm64, *_universal2:arm64"
+      # env:
+      #   # CIBW_BUILD: "cp3{8,9,10,11}-*"
+      #   # CIBW_ARCHS: "x86_64 arm64"
+      #   # CIBW_TEST_SKIP: "*_aarch64, *_arm64, *_universal2:arm64"
 
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
