Include cloud map datafiles in distributed package

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,19 @@ console_scripts =
     nuspacesim = nuspacesim.apps.cli:cli
 
 [options.package_data]
+nuspacesim.data.cloud_maps =
+    nss_map_CloudTopPressure_01.v0.fits
+    nss_map_CloudTopPressure_02.v0.fits
+    nss_map_CloudTopPressure_03.v0.fits
+    nss_map_CloudTopPressure_04.v0.fits
+    nss_map_CloudTopPressure_05.v0.fits
+    nss_map_CloudTopPressure_06.v0.fits
+    nss_map_CloudTopPressure_07.v0.fits
+    nss_map_CloudTopPressure_08.v0.fits
+    nss_map_CloudTopPressure_09.v0.fits
+    nss_map_CloudTopPressure_10.v0.fits
+    nss_map_CloudTopPressure_11.v0.fits
+    nss_map_CloudTopPressure_12.v0.fits
 nuspacesim.data.nuleptonsim_tables =
     nu2tau_cdf.0.h5
     nu2tau_pexit.0.h5
