Update setup.cfg to include awkward and uproot dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,8 @@ install_requires =
     numpy>=1.21
     rich
     scipy
+    awkward
+    uproot
     cached-property;python_version<"3.8"
     configparser;python_version<"3.8"
     importlib-metadata;python_version<"3.8"
