TOML configfile & unit tests. Remove old XML code.

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,15 +31,16 @@ install_requires =
     dask
     dask[distributed]
     h5py
-    lxml
     matplotlib
     numpy>=1.21
+    pydantic
     rich
     scipy
-    cached-property;python_version<"3.8"
+    tomli-w
     configparser;python_version<"3.8"
     importlib-metadata;python_version<"3.8"
     importlib-resources;python_version<"3.9"
+    tomli;python_version<"3.11"
 python_requires = >=3.8
 ext_package = nuspacesim
 package_dir =
