Adding Gaisser Hillas and Greisen to Cphotang

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,7 +83,8 @@ nuspacesim.data.nupyprop_tables =
 nuspacesim.data.radio_params =
     ionosphere_params.hdf5
     waveform_params.hdf5
-
+nuspacesim.dat.CONEX_table =
+    dumpGH_conex_pi_E17_95deg_0km_eposlhc_1394249052_211.dat
 [bdist_wheel]
 universal = 0
 
