--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,8 @@ console_scripts =
     nuspacesim = nuspacesim.apps.cli:cli
 
 [options.package_data]
+nuspacesim.dat.CONEX_table =
+    dumpGH_conex_pi_E17_95deg_0km_eposlhc_1394249052_211.dat
 nuspacesim.data.cloud_maps =
     nss_map_CloudTopPressure_01.v0.fits
     nss_map_CloudTopPressure_02.v0.fits
