--- a/sample_input_file.toml
+++ b/sample_input_file.toml
@@ -30,11 +30,12 @@ gain = "1.8 dB"
 
 [simulation]
 mode = "Diffuse"
-thrown_events = 100000
+thrown_events = 1000
 max_cherenkov_angle = "3.0000000000000004 deg"
 max_azimuth_angle = "360.0 deg"
 angle_from_limb = "7.0 deg"
 cherenkov_light_engine = "Default"
+conex_output = true
 
 [simulation.ionosphere]
 enable = true
