Add nuleptonsim & nupyprop_bdhm tables in Taus data lookup options.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
-requires = ["setuptools>=46",
+requires = ["setuptools>=65.0.0",
             "setuptools_scm[toml]>=3.4",
-            "wheel",
+            "wheel>=0.41.0",
             "pybind11>=2.8",
             "numpy>1.17",
            ]
@@ -18,7 +18,7 @@ test-requires = "pytest"
 test-command = "pytest {project}/test"
 
 [tool.cibuildwheel.macos]
-archs = ["x86_64"] #, "universal2", "arm64"]
+archs = ["x86_64", "universal2", "arm64"]
 
 [tool.cibuildwheel.linux]
 archs = ["x86_64"]
