--- a/.github/workflows/pypi-build-test-publish.yml
+++ b/.github/workflows/pypi-build-test-publish.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: [38, 39, 310, 311]
+        python: [39, 310, 311, 312, 312]
         arch: [x86, arm]
         include:
           - os: ubuntu-latest
