--- a/.github/workflows/pypi-build-test-publish.yml
+++ b/.github/workflows/pypi-build-test-publish.yml
@@ -53,7 +53,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: nuspacesim-gh-pypi-artifact-${{ matrix.os }}-${{ matrix.cibw_arch }}-cp${{ matrix.python }}-${{ github.run_id }}
-        path: wheelhouse/*.whl
+        path: wheelhouse/${{ github.run_id }}/*.whl
         retention-days: 1
 
   publish:
@@ -65,12 +65,11 @@ jobs:
     - name: Download Build Artifacts
       uses: actions/download-artifact@v4
       with:
-        name: nuspacesim-gh-pypi-artifact-${{ matrix.os }}-${{ matrix.cibw_arch }}-cp${{ matrix.python }}-${{ github.run_id }}
-        path: wheelhouse/
+        path: wheelhouse/${{ github.run_id }}/
 
     - name: Publish a Python distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.PYPI_SECRET }}
-        packages_dir: wheelhouse/
+        packages_dir: wheelhouse/${{ github.run_id }}/
