--- a/.github/workflows/pypi-build-test-publish.yml
+++ b/.github/workflows/pypi-build-test-publish.yml
@@ -53,7 +53,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: nuspacesim-gh-pypi-artifact-${{ matrix.os }}-${{ matrix.cibw_arch }}-cp${{ matrix.python }}-${{ github.run_id }}
-        path: wheelhouse/${{ github.run_id }}/*.whl
+        path: wheelhouse/*.whl
         retention-days: 1
 
   publish:
@@ -61,15 +61,39 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_wheels
 
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        python: [39, 310, 311, 312, 313]
+        arch: [x86, arm]
+        include:
+          - os: ubuntu-latest
+            arch: x86
+            platform_id: manylinux_x86_64
+            cibw_arch: auto
+          - os: macos-latest
+            arch: x86
+            platform_id: macosx_x86_64
+            cibw_arch: x86_64
+          - os: macos-latest
+            arch: arm
+            platform_id: macosx_arm64
+            cibw_arch: arm64
+        exclude:
+          - os: ubuntu-latest
+            arch: arm
+
     steps:
     - name: Download Build Artifacts
       uses: actions/download-artifact@v4
       with:
-        path: wheelhouse/${{ github.run_id }}/
+        name: nuspacesim-gh-pypi-artifact-${{ matrix.os }}-${{ matrix.cibw_arch }}-cp${{ matrix.python }}-${{ github.run_id }}
+        path: wheelhouse/
 
     - name: Publish a Python distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.PYPI_SECRET }}
-        packages_dir: wheelhouse/${{ github.run_id }}/
+        packages_dir: wheelhouse/
