--- a/sample_input_file.toml
+++ b/sample_input_file.toml
@@ -30,12 +30,13 @@ gain = "1.8 dB"
 
 [simulation]
 mode = "Diffuse"
-thrown_events = 100
+thrown_events = 20000
 max_cherenkov_angle = "3.0000000000000004 deg"
 max_azimuth_angle = "360.0 deg"
 angle_from_limb = "7.0 deg"
 eas_long_profile = "Greisen"
 cherenkov_light_engine = "nuspacesim"
+conex_output = true
 
 [simulation.ionosphere]
 enable = true
